<resources>
    <string name="app_name">WeatherApp</string>
    <string name="location">Location</string>
    <string name="updated_at">updated at</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_24_c">24°C</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sea_level">Sea Level</string>
    <string name="something_went_wrong">Something Went Wrong</string>
</resources>