<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="25dp"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainContainer"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:textSize="24sp"
                android:text="@string/location"/>
            <TextView
                android:textSize="14sp"
                android:id="@+id/updatedAt"
                android:text="@string/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/status"
                android:layout_gravity="center"
                android:text="@string/clear_sky"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temp"
                android:textSize="90sp"
                android:layout_gravity="center"
                android:text="@string/_24_c"
                android:fontFamily="sans-serif-thin">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_min"
                    android:text="@string/min_temp"/>
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_max"
                    android:text="@string/max_temp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/detailsContainer"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:background="#3CF1E8F1"
                    android:layout_height="wrap_content">
                    <!-- <ImageView
                         android:layout_width="25dp"
                         android:src=""
                         android:layout_height="25dp"
                         app:tint="#FFFFFF" />-->
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sunrise"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:background="#3CF1E8F1"
                    android:layout_height="wrap_content">
                    <!--     <ImageView
                             android:layout_width="25dp"
                             android:src=""
                             android:layout_height="25dp"
                             app:tint="#FFF" />-->
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sunset"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:background="#3CF1E8F1"
                    android:layout_height="wrap_content">
                    <!--  <ImageView
                          android:layout_width="25dp"
                          android:src=""
                          android:layout_height="25dp"
                          app:tint="#FFF" />-->
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/wind"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:background="#3CF1E8F1"
                    android:layout_height="wrap_content">
                    <!--<ImageView
                        android:layout_width="25dp"
                        android:src=""
                        android:layout_height="25dp"
                        app:tint="#FFF" />-->
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pressure"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:background="#3CF1E8F1"
                    android:layout_height="wrap_content">
                    <!-- <ImageView
                         android:layout_width="25dp"
                         android:src=""
                         android:layout_height="25dp"
                         app:tint="#FFF" />-->
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/humidity"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:padding="8dp"
                    android:background="#3CF1E8F1"
                    android:layout_height="wrap_content">
                    <!--    <ImageView
                            android:layout_width="25dp"
                            android:src=""
                            android:layout_height="25dp"
                            app:tint="#FFF" />-->
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textSize="12sp"
                        android:text="@string/sea_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seaLevel"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/something_went_wrong"
        android:id="@+id/errorTxt"
        android:layout_centerInParent="true"/>

</RelativeLayout>